--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,5 @@
 // Body
-$body-bg: #f8fafc;
+$body-bg: #f7f9fb;
 
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
@@ -17,3 +17,12 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+$primary:#687864;
+$secondary:#31708e;
+$success:#5085a5;
+$danger:#cc330d;
+$info:#8fc1e3;
+$warning:#6e9fa5;
+$light:#8fc1e3;
+$dark:#31708e;
